# flippi

./: .gitignore  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/getting-started/: device-tour.md  ethics-and-law.md  firmware-sd-cli.md
docs/javascripts/: flipper-sim.js  mathjax.js  physics-anim.js  quiz.js
docs/micropython/: flipperzero-api.md  setup.md
docs/physics-primer/: electricity-signals-101.md  em-spectrum.md  modulation.md  radio-101.md  waves-101.md
docs/reference/: glossary.md  resources.md
docs/signals/: bad-usb.md  gpio.md  ibutton.md  infrared.md  nfc.md  rfid-125khz.md  sub-ghz.md  u2f.md
docs/stylesheets/: extra.css
